# twixel_rs

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  README.md  justfile
.github/workflows/: ci.yaml
.sqlx/: query-991158465507b647a883ac1e29a3ce1d9bc83b30a846ef301bc55b7350f85f6d.json  query-b35b2164362727c9dc19f773fcd992f81b1569e1251ac592cc42e41919f01062.json  query-ec1ed2ab1a358c61d3ebce3e5aae40fea96bfdf25e1ef324b4a6fc545b2cbd35.json
benches/: benches.rs
examples/: .gitignore
examples/raw_connection/: Cargo.toml
examples/raw_connection/src/: main.rs
logs/: logs.txt
src/: auth.rs  client_builder.rs  connection.rs  irc_message.rs  lib.rs  tests.rs  user.rs
src/irc_message/: command.rs  message.rs  mod.rs  owned.rs  prefix.rs  raw.rs  tags.rs
tests/: tests.rs
twixel/: Cargo.toml
twixel/.sqlx/: query-2140b681f6f026a6719dfc88c3c258365f8fcc14706e2226e11ab5341b878dd7.json  query-228952da1037c6c6bfd6d71fb3676859269e9af4f37aaaf0c11fad91c2c92084.json  query-47327463cbd34b48a7fe3869f91e26245284d2925b28dabcd037702cd107c69b.json  query-53e67bab31e1359b6b98a643bfbcf840494d3f0307a4b63a74a78b781d58fccf.json  query-6c146ae11419462069897cab5b317e7bfc5a65313658420864d59445f66d513c.json  query-6de94be184f1ad96944cf0945c36293ada91bb3c6d798f71b810d8ff8f88badc.json  query-8a7f5cf8aad02c8054dcb5cf9801dd4bd15bf8a988f6f27f204aadb346192888.json  query-a4518632651a47fadaf2e95ec2cb5fafc8392d11c9281d2550794937428d27af.json  query-a6495b8e30a3c18c49360619607db94b465cb9a3d803b6abd20560275ea01626.json
twixel/migrations/: 20250121225111_initial.sql
twixel/src/: anymap.rs  bot.rs  cli.rs  command.rs  commands.rs  config.rs  db.rs  eval.rs  guard.rs  handler.rs  main.rs  util.rs
twixel/src/command/: guard.rs  mod.rs
twixel/src/commands/: argtest.rs  breadfact.rs  catfact.rs  gpt.rs  join.rs  mod.rs  part.rs  raw.rs  remindfish.rs  sql.rs  strdbg.rs  suggest.rs  test.rs
twixel/src/handler/: extract.rs  guard.rs  response.rs
twixel/src/util/: db.rs
twixel_core/: Cargo.toml
twixel_core/benches/: benches.rs
twixel_core/src/: auth.rs  client_builder.rs  connection.rs  lib.rs  user.rs
twixel_core/src/connection/: mod.rs  pool.rs
twixel_core/src/irc_message/: builder.rs  command.rs  iter.rs  message.rs  mod.rs  owned.rs  prefix.rs  raw.rs  tags.rs
twixel_core/src/irc_message/semantic/: clearchat.rs  clearmsg.rs  mod.rs  notice.rs  ping.rs  privmsg.rs  userstate.rs  util.rs
