[package]
name = "twitch_irc"
authors = ["Júlia Paschoalinoto <julia@juliapixel.com>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
hashbrown = { version = "0.14" }
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.33", features = ["sync", "rt", "time"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
rand = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", optional = true}
memchr = "2.6.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benches"
harness = false

[features]
serde = ["dep:serde", "hashbrown/serde"]
chrono = ["dep:chrono", "chrono/serde"]
