[workspace]
members = [
    "twixel",
    "twixel_core",
]
resolver = "2"
package = { edition = "2024" }

[profile.release]
# lto = true
opt-level = 3

# [patch.crates-io]
# rquickjs-sys = { git = "https://github.com/DelSkayn/rquickjs.git" }
# rquickjs-core = { git = "https://github.com/DelSkayn/rquickjs.git" }
# rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git" }
