[package]
name = "twixel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
owo-colors = "4.1.0"
parking_lot = "0.12.3"
rquickjs = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
twixel_core = { path = "../twixel_core", features = ["rustls", "chrono"] }
unicode-segmentation = "1.12.0"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [
    "json",
    "charset",
    "http2",
    "rustls-tls",
    "brotli",
    "deflate",
    "gzip",
    "zstd",
]
