[package]
name = "twixel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-channel = "2.3.1"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive", "env"] }
config = "0.15.6"
dashmap = "6.1.0"
dotenvy = "0.15.7"
either = { version = "1.13.0", features = ["serde"] }
env_logger = "0.11.6"
futures = "0.3.31"
hashbrown = "0.15.2"
log = "0.4.25"
owo-colors = "4.1.0"
parking_lot = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
smart-default = "0.7.1"
sqlx = { version = "0.8.3", features = ["chrono", "derive", "json", "macros", "migrate", "runtime-tokio", "sqlite"], default-features = false }
thiserror = "2.0.11"
tokio = { version = "1.43.1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
twixel_core = { path = "../twixel_core", features = ["rustls", "chrono"] }
unicode-segmentation = "1.12.0"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [
    "json",
    "charset",
    "http2",
    "rustls-tls",
    "brotli",
    "deflate",
    "gzip",
    "zstd",
]

[dependencies.rquickjs]
version = "0.8.1"
features = ["either", "futures", "macro"]

[target.aarch64-linux-android.dependencies.rquickjs]
version = "0.8.1"
features = ["either", "futures", "macro", "bindgen"]
