[package]
name = "twixel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-channel = "2.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env", "string"] }
config = "0.15"
dashmap = "6.1"
dotenvy = "0.15.7"
either = { version = "1.13", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
getset = "0.1"
hashbrown = "0.15"
log = "0.4"
owo-colors = "4.1"
parking_lot = "0.12"
rand = "0.9"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.7"
sqlx = { version = "0.8", features = ["chrono", "derive", "json", "macros", "migrate", "runtime-tokio", "sqlite"], default-features = false }
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
twixel_core = { path = "../twixel_core", features = ["rustls", "chrono"] }
unicode-segmentation = "1.12"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [
    "json",
    "charset",
    "http2",
    "rustls-tls",
    "brotli",
    "deflate",
    "gzip",
    "zstd",
]

[dependencies.rquickjs]
version = "0.9"
features = ["either", "futures", "macro"]

[target.aarch64-linux-android.dependencies.rquickjs]
version = "0.9"
features = ["either", "futures", "macro", "bindgen"]
