[package]
name = "twixel_core"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
hashbrown = { version = "0.14" }
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.35", features = ["sync", "time"] }
tokio-tungstenite = { version = "0.21" }
rand = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", optional = true }
memchr = "2.7"
smallvec = { version = "1.11", features = ["union", "const_generics", "const_new"] }
serde_json = "1.0"
bitflags = "2.4"
either = "1.13.0"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"

[[bench]]
name = "benches"
harness = false

[features]
native-tls = ["tokio-tungstenite/native-tls"]
rustls = [
    "tokio-tungstenite/rustls",
    "tokio-tungstenite/tokio-rustls",
    "tokio-tungstenite/rustls-native-certs",
    "tokio-tungstenite/rustls-tls-native-roots"
]
serde = ["dep:serde", "hashbrown/serde", "smallvec/serde", "bitflags/serde"]
chrono = ["dep:chrono", "chrono/serde"]
unstable = []
